--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "jose": "^6.0.10",
     "lucide-react": "^0.503.0",
     "next": "15.3.0",
     "prisma": "^6.6.0",
@@ -30,6 +31,7 @@
     "react-hook-form": "^7.56.0",
     "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.2.0",
+    "util": "^0.12.5",
     "zod": "^3.24.3"
   },
   "devDependencies": {
