--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jose": "^6.0.10",
     "lucide-react": "^0.503.0",
     "next": "15.3.0",
+    "next-auth": "^4.24.11",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
